--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,5 @@
 html {
-  background-color: #EDEDED;
+  background-color: #ededed;
 }
 
 * {
@@ -19,7 +19,7 @@ a.active {
 body {
   margin-top: 50px;
   font-family: "Quicksand", sans-serif;
-  background-color: #EDEDED;
+  background-color: #ededed;
 }
 
 .list-group-item {
@@ -31,7 +31,6 @@ img.arrow {
   height: 64px;
 }
 
-
 .day-changer:hover {
   cursor: pointer;
   text-decoration: underline;
@@ -41,7 +40,7 @@ img.arrow {
   width: 100% !important;
   min-width: 200px;
   max-width: 600px;
-  background-color: #EDEDED;
+  background-color: #ededed;
 }
 
 .small-cards-container {
@@ -70,9 +69,8 @@ input[type="text"] {
   max-width: 600px;
 }
 
-
 .search-form {
-  background-color: #DBDBDB;
+  background-color: #dbdbdb;
   padding: 30px 0px;
 }
 
@@ -82,7 +80,7 @@ input[type="text"] {
   position: fixed;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
 }
 
 .about-page {
@@ -90,15 +88,19 @@ input[type="text"] {
   margin: 0px auto;
 }
 
-.about-page a{
-color: #3D20F2;
-font-weight: bold;
+.about-page a {
+  color: #3d20f2;
+  font-weight: bold;
 }
-@media only screen and (min-width: 700px){
+@media only screen and (min-width: 700px) {
   .weather-cards-2 {
     flex-direction: row !important;
   }
   .h-card {
     margin-left: 3px;
   }
+}
+
+.card-body.text-primary {
+  color: #373737 !important;
 }
